--- a/.eslintrc
+++ b/.eslintrc
@@ -17,9 +17,7 @@
 		},
 		"ecmaVersion": 2018,
 		"sourceType": "module",
-		"project": [
-			"tsconfig.json"
-		]
+		"project": ["tsconfig.json"]
 	},
 	"plugins": [
 		"eslint-plugin-react",
@@ -34,6 +32,7 @@
 		}
 	},
 	"rules": {
+		"react/react-in-jsx-scope": "off",
 		"@typescript-eslint/adjacent-overload-signatures": "error",
 		"@typescript-eslint/array-type": [
 			"error",
@@ -81,10 +80,7 @@
 			}
 		],
 		"@typescript-eslint/explicit-module-boundary-types": "off",
-		"@typescript-eslint/indent": [
-			"error",
-			"tab"
-		],
+		"@typescript-eslint/indent": ["error", "tab"],
 		"@typescript-eslint/keyword-spacing": "error",
 		"@typescript-eslint/member-delimiter-style": [
 			"error",
@@ -107,9 +103,7 @@
 		"@typescript-eslint/no-misused-new": "error",
 		"@typescript-eslint/no-namespace": "error",
 		"@typescript-eslint/no-parameter-properties": "off",
-		"@typescript-eslint/no-shadow": [
-			"warn"
-		],
+		"@typescript-eslint/no-shadow": ["warn"],
 		"@typescript-eslint/no-unused-expressions": "error",
 		"@typescript-eslint/no-use-before-define": "off",
 		"@typescript-eslint/no-unsafe-assignment": "off",
@@ -126,10 +120,7 @@
 				"avoidEscape": true
 			}
 		],
-		"@typescript-eslint/semi": [
-			"error",
-			"always"
-		],
+		"@typescript-eslint/semi": ["error", "always"],
 		"@typescript-eslint/triple-slash-reference": [
 			"error",
 			{
@@ -141,36 +132,21 @@
 		"@typescript-eslint/type-annotation-spacing": "error",
 		"@typescript-eslint/unified-signatures": "error",
 		"arrow-body-style": "error",
-		"arrow-parens": [
-			"error",
-			"always"
-		],
-		"brace-style": [
-			"error",
-			"1tbs"
-		],
-		"comma-dangle": [
-			"error",
-			"always-multiline"
-		],
+		"arrow-parens": ["error", "always"],
+		"brace-style": ["error", "1tbs"],
+		"comma-dangle": ["error", "always-multiline"],
 		"complexity": "error",
 		"constructor-super": "error",
 		"curly": "error",
 		"eol-last": "error",
-		"eqeqeq": [
-			"error",
-			"always"
-		],
+		"eqeqeq": ["error", "always"],
 		"guard-for-in": "error",
 		"id-blacklist": "off",
 		"id-match": "off",
 		"import/order": "off",
 		"jest/no-focused-tests": "error",
 		"linebreak-style": "off",
-		"max-classes-per-file": [
-			"error",
-			1
-		],
+		"max-classes-per-file": ["error", 1],
 		"max-len": [
 			"error",
 			{
@@ -198,10 +174,7 @@
 		"no-octal": "error",
 		"no-octal-escape": "error",
 		"no-regex-spaces": "error",
-		"no-restricted-syntax": [
-			"error",
-			"ForInStatement"
-		],
+		"no-restricted-syntax": ["error", "ForInStatement"],
 		"no-shadow": "off",
 		"no-throw-literal": "error",
 		"no-trailing-spaces": "error",
@@ -213,16 +186,10 @@
 		"no-unused-vars": "off",
 		"no-var": "error",
 		"object-shorthand": "error",
-		"one-var": [
-			"error",
-			"never"
-		],
+		"one-var": ["error", "never"],
 		"prefer-arrow/prefer-arrow-functions": "error",
 		"prefer-const": "error",
-		"quote-props": [
-			"error",
-			"consistent-as-needed"
-		],
+		"quote-props": ["error", "consistent-as-needed"],
 		"radix": "off",
 		"react/jsx-boolean-value": "error",
 		"react/jsx-closing-bracket-location": "error",
@@ -247,10 +214,7 @@
 			}
 		],
 		"react/jsx-fragments": "error",
-		"react/jsx-equals-spacing": [
-			"error",
-			"never"
-		],
+		"react/jsx-equals-spacing": ["error", "never"],
 		"react/jsx-indent": [
 			"error",
 			"tab",
@@ -259,10 +223,7 @@
 				"checkAttributes": true
 			}
 		],
-		"react/jsx-indent-props": [
-			"error",
-			"tab"
-		],
+		"react/jsx-indent-props": ["error", "tab"],
 		"react/jsx-key": "error",
 		"react/jsx-max-props-per-line": [
 			"error",
@@ -284,17 +245,12 @@
 		"react/self-closing-comp": "error",
 		"react/prop-types": "off",
 		"space-before-function-paren": "off",
-		"space-in-parens": [
-			"off",
-			"never"
-		],
+		"space-in-parens": ["off", "never"],
 		"spaced-comment": [
 			"error",
 			"always",
 			{
-				"markers": [
-					"/"
-				]
+				"markers": ["/"]
 			}
 		],
 		"use-isnan": "error",
