--- a/package.json
+++ b/package.json
@@ -58,8 +58,10 @@
 		"@types/node": "^20.11.24",
 		"@types/react": "^18.2.61",
 		"@types/react-dom": "^18.2.19",
+		"axios": "^1.6.7",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-icons": "^5.0.1",
 		"react-router-dom": "^6.4.3",
 		"react-scripts": "5.0.1",
 		"typescript": "^4.9.5",
@@ -105,7 +107,7 @@
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-standard": "^5.0.0",
 		"eslint-plugin-unused-imports": "^2.0.0",
-		"sass": "^1.71.1",
-		"prettier": "3.1.1"
+		"prettier": "3.1.1",
+		"sass": "^1.71.1"
 	}
 }
