--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
 		"react-router-dom": "^6.4.3",
 		"react-scripts": "5.0.1",
 		"typescript": "^4.9.5",
+		"use-image-color": "^0.0.9",
 		"web-vitals": "^3.5.2"
 	},
 	"scripts": {
