--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
 		"@types/react": "^18.2.61",
 		"@types/react-dom": "^18.2.19",
 		"axios": "^1.6.7",
+		"polished": "^4.3.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^5.0.1",
