--- a/package.json
+++ b/package.json
@@ -60,13 +60,13 @@
 		"@types/react-dom": "^18.2.19",
 		"axios": "^1.6.7",
 		"polished": "^4.3.1",
+		"quantize": "^1.0.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^5.0.1",
 		"react-router-dom": "^6.4.3",
 		"react-scripts": "5.0.1",
 		"typescript": "^4.9.5",
-		"use-image-color": "^0.0.9",
 		"web-vitals": "^3.5.2"
 	},
 	"scripts": {
