--- a/package.json
+++ b/package.json
@@ -51,10 +51,6 @@
 		"@progress/kendo-theme-bootstrap": "^7.2.0",
 		"@progress/kendo-theme-default": "^7.2.0",
 		"@progress/kendo-theme-material": "^7.2.0",
-		"@testing-library/jest-dom": "^6.4.2",
-		"@testing-library/react": "^14.2.1",
-		"@testing-library/user-event": "^14.5.2",
-		"@types/jest": "^29.5.12",
 		"@types/node": "^20.11.24",
 		"@types/react": "^18.2.61",
 		"@types/react-dom": "^18.2.19",
@@ -72,7 +68,7 @@
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
-		"test": "react-scripts test",
+		"test": "jest --watchAll",
 		"eject": "react-scripts eject",
 		"eslint": "eslint src/** --fix",
 		"prettier": "prettier --check src/**"
@@ -96,6 +92,12 @@
 		]
 	},
 	"devDependencies": {
+		"@swc/core": "^1.4.4",
+		"@swc/jest": "^0.2.36",
+		"@testing-library/jest-dom": "^6.4.2",
+		"@testing-library/react": "^14.2.1",
+		"@testing-library/user-event": "^14.5.2",
+		"@types/jest": "^29.5.12",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-config-standard": "^17.0.0",
@@ -109,7 +111,10 @@
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-standard": "^5.0.0",
 		"eslint-plugin-unused-imports": "^2.0.0",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
 		"prettier": "3.1.1",
-		"sass": "^1.71.1"
+		"sass": "^1.71.1",
+		"ts-node": "^10.9.2"
 	}
 }
